<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/containerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_toolbar_listar_dudas"
            android:name="com.example.helpme.TopToolbarFragment"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:layout="@layout/fragment_top_toolbar" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_persona_duda"
            android:layout_width="143dp"
            android:layout_height="124dp"
            android:contentDescription="@string/app_name"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.162"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textViewUO"
            android:layout_width="91dp"
            android:layout_height="34dp"
            android:text="@string/UO"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_persona_duda"
            app:layout_constraintVertical_bias="0.1" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="178dp"
            android:layout_height="24dp"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUO"
            app:layout_constraintVertical_bias="0.001" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="401dp"
            android:layout_height="381dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.938">

            <LinearLayout
                android:id="@+id/ll_user_name"
                android:layout_width="369dp"
                android:layout_height="68dp"
                android:layout_margin="16dp"
                android:background="@drawable/text_view_profile"
                android:orientation="vertical"
                android:padding="15dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp">

                    <EditText
                        android:id="@+id/tv_user_name"
                        android:layout_width="280dp"
                        android:layout_height="32dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="7dp"
                        android:layout_marginEnd="54dp"
                        android:layout_marginBottom="9dp"
                        android:background="@color/white"
                        android:minHeight="48dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="26dp"
                        android:layout_height="30dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="15dp"
                        android:contentDescription="@string/editicon"
                        app:srcCompat="@drawable/edit_icon"
                        app:tint="#646464" />

                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_user_name_title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:text="@string/nombre_completo"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!-- ASIGNATURAS -->


            <LinearLayout
                android:id="@+id/ll_user_asignaturas"
                android:layout_width="368dp"
                android:layout_height="178dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/text_view_profile"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.655">


                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="371dp"
                    android:layout_height="157dp"
                    android:contentDescription="@string/Título"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.676">


                    <LinearLayout
                        android:id="@+id/ll_dentroscroll"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"></LinearLayout>


                </ScrollView>


            </LinearLayout>

            <TextView
                android:id="@+id/tv_asignaturas"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                android:text="@string/asignaturasProfile"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bt_guardar_perfil"
                android:layout_width="156dp"
                android:layout_height="40dp"
                android:background="@drawable/button_rounded_corners_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/tx_bt_guardar_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="center"
                    android:text="@string/guardar"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonVerAmigos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
            android:background="@drawable/button_rounded_corners_secondary"
            android:text="@string/amigos"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.567"
            app:layout_constraintStart_toEndOf="@+id/img_persona_duda"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.283" />

        <TextView
            android:id="@+id/tveditarimagen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar_imagen"
            android:textStyle="bold"
            android:textColor="#303030"
            android:textSize="16sp"
            android:background="@drawable/text_view_profile_editimage"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fragment_toolbar_listar_dudas"
            app:layout_constraintVertical_bias="0.322" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="90dp"
        app:menu="@menu/navigation_menu"
        app:itemActiveIndicatorStyle="@style/Theme.Material3.DynamicColors.DayNight"
        android:background="@drawable/rounded_corners_navigation"
        app:itemIconSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>